# CS171-Project

cpu-version/: .gitignore  CMakeLists.txt  main.cpp
cpu-version/include/: accel.h  camera.h  core.h  image.h  integrator.h  interaction.h  lights.h  obj_loder.h  point.h  ray.h  reservoir.h  sampler.h  scene.h  triangle.h  utils.h
cpu-version/libs/: CMakeLists.txt
cpu-version/libs/stb/: CMakeLists.txt
cpu-version/libs/tinyobjloader/: CMakeLists.txt  tiny_obj_loader.h
cpu-version/src/: accel.cpp  camera.cpp  image.cpp  integrator.cpp  lights.cpp  obj_loder.cpp  ray.cpp  reservoir.cpp  scene.cpp
gpu-version/: .gitignore  CG-Final.vcxproj  gpu-version.sln  kernel.cu  main.cu
gpu-version/include/: accel.h  camera.h  core.h  cutil_math.h  image.h  integrator.h  interaction.h  obj_loader.h  point.h  ray.h  reservoir.h  sampler.h  scene.h  triangle.h  utils.h
gpu-version/src/: accel.cu  camera.cu  device_impl.cu  image.cu  obj_loader.cu  ray.cu  reservoir.cu  scene.cu
